parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID COLON vars main function
Rule 2     program -> PROGRAM ID COLON main function
Rule 3     program -> PROGRAM ID COLON vars main
Rule 4     program -> PROGRAM ID COLON main
Rule 5     main -> MAIN LPAREN RPAREN LBRACE bloqueAux RBRACE
Rule 6     main -> MAIN LPAREN RPAREN LBRACE vars bloqueAux RBRACE
Rule 7     vars -> VAR varAux1
Rule 8     varAux1 -> tipo varAux2 SEMICOLON
Rule 9     varAux1 -> tipo varAux2 SEMICOLON varAux1
Rule 10    varAux2 -> ID
Rule 11    varAux2 -> ID COMA varAux2
Rule 12    tipo -> INT
Rule 13    tipo -> FLOAT
Rule 14    tipo -> CHAR
Rule 15    tipoFunc -> INT
Rule 16    tipoFunc -> FLOAT
Rule 17    tipoFunc -> CHAR
Rule 18    tipoFunc -> VOID
Rule 19    bloque -> LBRACE RBRACE
Rule 20    bloque -> LBRACE bloqueAux RBRACE
Rule 21    function -> FUNCTION tipoFunc ID LPAREN RPAREN LBRACE RBRACE
Rule 22    function -> FUNCTION tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE
Rule 23    function -> FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE
Rule 24    function -> FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE
Rule 25    function -> FUNCTION tipoFunc ID LPAREN RPAREN LBRACE RBRACE function
Rule 26    function -> FUNCTION tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE function
Rule 27    function -> FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE function
Rule 28    function -> FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE function
Rule 29    bloqueAux -> estatuto
Rule 30    bloqueAux -> estatuto bloqueAux
Rule 31    while -> WHILE LPAREN expresion RPAREN bloque
Rule 32    estatuto -> asignacion
Rule 33    estatuto -> condicion
Rule 34    estatuto -> escritura
Rule 35    estatuto -> while
Rule 36    estatuto -> comparacion
Rule 37    asignacion -> ID EQUAL expresion SEMICOLON
Rule 38    comparacion -> ID EQUAL EQUAL expresion SEMICOLON
Rule 39    condicion -> IF LPAREN expresion RPAREN bloque SEMICOLON
Rule 40    condicion -> IF LPAREN expresion RPAREN bloque ELSE bloque SEMICOLON
Rule 41    escritura -> PRINT LPAREN escrituraAux RPAREN SEMICOLON
Rule 42    escrituraAux -> expresion
Rule 43    escrituraAux -> CTE_STRING
Rule 44    escrituraAux -> expresion COMA escrituraAux
Rule 45    escrituraAux -> CTE_STRING COMA escrituraAux
Rule 46    expresion -> exp
Rule 47    expresion -> exp LOWERTHAN exp
Rule 48    expresion -> exp MORETHAN exp
Rule 49    expresion -> exp DIFFERENT exp
Rule 50    exp -> termino
Rule 51    exp -> termino PLUS exp
Rule 52    exp -> termino MINUS exp
Rule 53    termino -> factor
Rule 54    termino -> factor TIMES termino
Rule 55    termino -> factor DIVIDE termino
Rule 56    factor -> LPAREN expresion RPAREN
Rule 57    factor -> factorAux
Rule 58    factorAux -> PLUS var_cte
Rule 59    factorAux -> MINUS var_cte
Rule 60    factorAux -> var_cte
Rule 61    var_cte -> ID
Rule 62    var_cte -> CTE_I
Rule 63    var_cte -> CTE_F

Terminals, with rules where they appear

CHAR                 : 14 17
COLON                : 1 2 3 4
COMA                 : 11 44 45
CTE_F                : 63
CTE_I                : 62
CTE_STRING           : 43 45
DIFFERENT            : 49
DIVIDE               : 55
ELSE                 : 40
EQUAL                : 37 38 38
FLOAT                : 13 16
FOR                  : 
FUNCTION             : 21 22 23 24 25 26 27 28
ID                   : 1 2 3 4 10 11 21 22 23 24 25 26 27 28 37 38 61
IF                   : 39 40
INT                  : 12 15
LBRACE               : 5 6 19 20 21 22 23 24 25 26 27 28
LOWERTHAN            : 47
LPAREN               : 5 6 21 22 23 24 25 26 27 28 31 39 40 41 56
MAIN                 : 5 6
MINUS                : 52 59
MORETHAN             : 48
PLUS                 : 51 58
PRINT                : 41
PROGRAM              : 1 2 3 4
RBRACE               : 5 6 19 20 21 22 23 24 25 26 27 28
RPAREN               : 5 6 21 22 23 24 25 26 27 28 31 39 40 41 56
SEMICOLON            : 8 9 37 38 39 40 41
TIMES                : 54
VAR                  : 7
VOID                 : 18
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

asignacion           : 32
bloque               : 31 39 40 40
bloqueAux            : 5 6 20 22 23 24 26 27 28 30
comparacion          : 36
condicion            : 33
escritura            : 34
escrituraAux         : 41 44 45
estatuto             : 29 30
exp                  : 46 47 47 48 48 49 49 51 52
expresion            : 31 37 38 39 40 42 44 56
factor               : 53 54 55
factorAux            : 57
function             : 1 2 25 26 27 28
main                 : 1 2 3 4
program              : 0
termino              : 50 51 52 54 55
tipo                 : 8 9
tipoFunc             : 21 22 23 24 25 26 27 28
varAux1              : 7 9
varAux2              : 8 9 11
var_cte              : 58 59 60
vars                 : 1 3 6 22 23 24 24 26 27 28 28
while                : 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID COLON vars main function
    (2) program -> . PROGRAM ID COLON main function
    (3) program -> . PROGRAM ID COLON vars main
    (4) program -> . PROGRAM ID COLON main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID COLON vars main function
    (2) program -> PROGRAM . ID COLON main function
    (3) program -> PROGRAM . ID COLON vars main
    (4) program -> PROGRAM . ID COLON main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . COLON vars main function
    (2) program -> PROGRAM ID . COLON main function
    (3) program -> PROGRAM ID . COLON vars main
    (4) program -> PROGRAM ID . COLON main

    COLON           shift and go to state 4


state 4

    (1) program -> PROGRAM ID COLON . vars main function
    (2) program -> PROGRAM ID COLON . main function
    (3) program -> PROGRAM ID COLON . vars main
    (4) program -> PROGRAM ID COLON . main
    (7) vars -> . VAR varAux1
    (5) main -> . MAIN LPAREN RPAREN LBRACE bloqueAux RBRACE
    (6) main -> . MAIN LPAREN RPAREN LBRACE vars bloqueAux RBRACE

    VAR             shift and go to state 7
    MAIN            shift and go to state 5

    main                           shift and go to state 8
    vars                           shift and go to state 6

state 5

    (5) main -> MAIN . LPAREN RPAREN LBRACE bloqueAux RBRACE
    (6) main -> MAIN . LPAREN RPAREN LBRACE vars bloqueAux RBRACE

    LPAREN          shift and go to state 9


state 6

    (1) program -> PROGRAM ID COLON vars . main function
    (3) program -> PROGRAM ID COLON vars . main
    (5) main -> . MAIN LPAREN RPAREN LBRACE bloqueAux RBRACE
    (6) main -> . MAIN LPAREN RPAREN LBRACE vars bloqueAux RBRACE

    MAIN            shift and go to state 5

    main                           shift and go to state 10

state 7

    (7) vars -> VAR . varAux1
    (8) varAux1 -> . tipo varAux2 SEMICOLON
    (9) varAux1 -> . tipo varAux2 SEMICOLON varAux1
    (12) tipo -> . INT
    (13) tipo -> . FLOAT
    (14) tipo -> . CHAR

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 11

    varAux1                        shift and go to state 15
    tipo                           shift and go to state 12

state 8

    (2) program -> PROGRAM ID COLON main . function
    (4) program -> PROGRAM ID COLON main .
    (21) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE RBRACE
    (22) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE
    (23) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE
    (24) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE
    (25) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE RBRACE function
    (26) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE function
    (27) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE function
    (28) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE function

    $end            reduce using rule 4 (program -> PROGRAM ID COLON main .)
    FUNCTION        shift and go to state 17

    function                       shift and go to state 16

state 9

    (5) main -> MAIN LPAREN . RPAREN LBRACE bloqueAux RBRACE
    (6) main -> MAIN LPAREN . RPAREN LBRACE vars bloqueAux RBRACE

    RPAREN          shift and go to state 18


state 10

    (1) program -> PROGRAM ID COLON vars main . function
    (3) program -> PROGRAM ID COLON vars main .
    (21) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE RBRACE
    (22) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE
    (23) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE
    (24) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE
    (25) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE RBRACE function
    (26) function -> . FUNCTION tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE function
    (27) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE function
    (28) function -> . FUNCTION tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE function

    $end            reduce using rule 3 (program -> PROGRAM ID COLON vars main .)
    FUNCTION        shift and go to state 17

    function                       shift and go to state 19

state 11

    (14) tipo -> CHAR .

    ID              reduce using rule 14 (tipo -> CHAR .)


state 12

    (8) varAux1 -> tipo . varAux2 SEMICOLON
    (9) varAux1 -> tipo . varAux2 SEMICOLON varAux1
    (10) varAux2 -> . ID
    (11) varAux2 -> . ID COMA varAux2

    ID              shift and go to state 21

    varAux2                        shift and go to state 20

state 13

    (12) tipo -> INT .

    ID              reduce using rule 12 (tipo -> INT .)


state 14

    (13) tipo -> FLOAT .

    ID              reduce using rule 13 (tipo -> FLOAT .)


state 15

    (7) vars -> VAR varAux1 .

    ID              reduce using rule 7 (vars -> VAR varAux1 .)
    IF              reduce using rule 7 (vars -> VAR varAux1 .)
    PRINT           reduce using rule 7 (vars -> VAR varAux1 .)
    WHILE           reduce using rule 7 (vars -> VAR varAux1 .)
    MAIN            reduce using rule 7 (vars -> VAR varAux1 .)
    RPAREN          reduce using rule 7 (vars -> VAR varAux1 .)


state 16

    (2) program -> PROGRAM ID COLON main function .

    $end            reduce using rule 2 (program -> PROGRAM ID COLON main function .)


state 17

    (21) function -> FUNCTION . tipoFunc ID LPAREN RPAREN LBRACE RBRACE
    (22) function -> FUNCTION . tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE
    (23) function -> FUNCTION . tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE
    (24) function -> FUNCTION . tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE
    (25) function -> FUNCTION . tipoFunc ID LPAREN RPAREN LBRACE RBRACE function
    (26) function -> FUNCTION . tipoFunc ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE function
    (27) function -> FUNCTION . tipoFunc ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE function
    (28) function -> FUNCTION . tipoFunc ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE function
    (15) tipoFunc -> . INT
    (16) tipoFunc -> . FLOAT
    (17) tipoFunc -> . CHAR
    (18) tipoFunc -> . VOID

    INT             shift and go to state 22
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25
    VOID            shift and go to state 23

    tipoFunc                       shift and go to state 26

state 18

    (5) main -> MAIN LPAREN RPAREN . LBRACE bloqueAux RBRACE
    (6) main -> MAIN LPAREN RPAREN . LBRACE vars bloqueAux RBRACE

    LBRACE          shift and go to state 27


state 19

    (1) program -> PROGRAM ID COLON vars main function .

    $end            reduce using rule 1 (program -> PROGRAM ID COLON vars main function .)


state 20

    (8) varAux1 -> tipo varAux2 . SEMICOLON
    (9) varAux1 -> tipo varAux2 . SEMICOLON varAux1

    SEMICOLON       shift and go to state 28


state 21

    (10) varAux2 -> ID .
    (11) varAux2 -> ID . COMA varAux2

    SEMICOLON       reduce using rule 10 (varAux2 -> ID .)
    COMA            shift and go to state 29


state 22

    (15) tipoFunc -> INT .

    ID              reduce using rule 15 (tipoFunc -> INT .)


state 23

    (18) tipoFunc -> VOID .

    ID              reduce using rule 18 (tipoFunc -> VOID .)


state 24

    (16) tipoFunc -> FLOAT .

    ID              reduce using rule 16 (tipoFunc -> FLOAT .)


state 25

    (17) tipoFunc -> CHAR .

    ID              reduce using rule 17 (tipoFunc -> CHAR .)


state 26

    (21) function -> FUNCTION tipoFunc . ID LPAREN RPAREN LBRACE RBRACE
    (22) function -> FUNCTION tipoFunc . ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE
    (23) function -> FUNCTION tipoFunc . ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE
    (24) function -> FUNCTION tipoFunc . ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE
    (25) function -> FUNCTION tipoFunc . ID LPAREN RPAREN LBRACE RBRACE function
    (26) function -> FUNCTION tipoFunc . ID LPAREN RPAREN LBRACE vars bloqueAux RBRACE function
    (27) function -> FUNCTION tipoFunc . ID LPAREN vars RPAREN LBRACE bloqueAux RBRACE function
    (28) function -> FUNCTION tipoFunc . ID LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE function

    ID              shift and go to state 30


state 27

    (5) main -> MAIN LPAREN RPAREN LBRACE . bloqueAux RBRACE
    (6) main -> MAIN LPAREN RPAREN LBRACE . vars bloqueAux RBRACE
    (29) bloqueAux -> . estatuto
    (30) bloqueAux -> . estatuto bloqueAux
    (7) vars -> . VAR varAux1
    (32) estatuto -> . asignacion
    (33) estatuto -> . condicion
    (34) estatuto -> . escritura
    (35) estatuto -> . while
    (36) estatuto -> . comparacion
    (37) asignacion -> . ID EQUAL expresion SEMICOLON
    (39) condicion -> . IF LPAREN expresion RPAREN bloque SEMICOLON
    (40) condicion -> . IF LPAREN expresion RPAREN bloque ELSE bloque SEMICOLON
    (41) escritura -> . PRINT LPAREN escrituraAux RPAREN SEMICOLON
    (31) while -> . WHILE LPAREN expresion RPAREN bloque
    (38) comparacion -> . ID EQUAL EQUAL expresion SEMICOLON

    VAR             shift and go to state 7
    ID              shift and go to state 36
    IF              shift and go to state 37
    PRINT           shift and go to state 33
    WHILE           shift and go to state 32

    vars                           shift and go to state 31
    asignacion                     shift and go to state 38
    estatuto                       shift and go to state 34
    bloqueAux                      shift and go to state 39
    while                          shift and go to state 40
    condicion                      shift and go to state 35
    comparacion                    shift and go to state 41
    escritura                      shift and go to state 42

state 28

    (8) varAux1 -> tipo varAux2 SEMICOLON .
    (9) varAux1 -> tipo varAux2 SEMICOLON . varAux1
    (8) varAux1 -> . tipo varAux2 SEMICOLON
    (9) varAux1 -> . tipo varAux2 SEMICOLON varAux1
    (12) tipo -> . INT
    (13) tipo -> . FLOAT
    (14) tipo -> . CHAR

    MAIN            reduce using rule 8 (varAux1 -> tipo varAux2 SEMICOLON .)
    ID              reduce using rule 8 (varAux1 -> tipo varAux2 SEMICOLON .)
    IF              reduce using rule 8 (varAux1 -> tipo varAux2 SEMICOLON .)
    PRINT           reduce using rule 8 (varAux1 -> tipo varAux2 SEMICOLON .)
    WHILE           reduce using rule 8 (varAux1 -> tipo varAux2 SEMICOLON .)
    RPAREN          reduce using rule 8 (varAux1 -> tipo varAux2 SEMICOLON .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 11

    varAux1                        shift and go to state 43
    tipo                           shift and go to state 12

state 29

    (11) varAux2 -> ID COMA . varAux2
    (10) varAux2 -> . ID
    (11) varAux2 -> . ID COMA varAux2

    ID              shift and go to state 21

    varAux2                        shift and go to state 44

state 30

    (21) function -> FUNCTION tipoFunc ID . LPAREN RPAREN LBRACE RBRACE
    (22) function -> FUNCTION tipoFunc ID . LPAREN RPAREN LBRACE vars bloqueAux RBRACE
    (23) function -> FUNCTION tipoFunc ID . LPAREN vars RPAREN LBRACE bloqueAux RBRACE
    (24) function -> FUNCTION tipoFunc ID . LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE
    (25) function -> FUNCTION tipoFunc ID . LPAREN RPAREN LBRACE RBRACE function
    (26) function -> FUNCTION tipoFunc ID . LPAREN RPAREN LBRACE vars bloqueAux RBRACE function
    (27) function -> FUNCTION tipoFunc ID . LPAREN vars RPAREN LBRACE bloqueAux RBRACE function
    (28) function -> FUNCTION tipoFunc ID . LPAREN vars RPAREN LBRACE vars bloqueAux RBRACE function

    LPAREN          shift and go to state 45


state 31

    (6) main -> MAIN LPAREN RPAREN LBRACE vars . bloqueAux RBRACE
    (29) bloqueAux -> . estatuto
    (30) bloqueAux -> . estatuto bloqueAux
    (32) estatuto -> . asignacion
    (33) estatuto -> . condicion
    (34) estatuto -> . escritura
    (35) estatuto -> . while
    (36) estatuto -> . comparacion
    (37) asignacion -> . ID EQUAL expresion SEMICOLON
    (39) condicion -> . IF LPAREN expresion RPAREN bloque SEMICOLON
    (40) condicion -> . IF LPAREN expresion RPAREN bloque ELSE bloque SEMICOLON
    (41) escritura -> . PRINT LPAREN escrituraAux RPAREN SEMICOLON
    (31) while -> . WHILE LPAREN expresion RPAREN bloque
    (38) comparacion -> . ID EQUAL EQUAL expresion SEMICOLON

    ID              shift and go to state 36
    IF              shift and go to state 37
    PRINT           shift and go to state 33
    WHILE           shift and go to state 32
